assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&family=Montserrat&display=swap');

body{
    padding: 0px;
    margin: 0px;
    background: url(../images/backgrounds/background.jpg) no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
    border: 0px;
    overflow-x: hidden;
    font-family: 'montserrat', sans-serif;
}
h1, h2, h3, h4, h5{
    font-family: 'libre baskerville', serif;
    margin: 0px;
    padding: 0px;
}
/* ----------------STYLINGS OF MAIN LANDING PAGE------------------- */
.landing-heading{
    color: rgb(255, 255, 255);
    font-size: 200%;
    text-align: center;
    padding-top: 40px;
    margin-top: 0px;
}
.landing-sub-heading{
    color: rgb(255, 255, 255);
    text-align: center;
    margin-bottom: 30px;
}
.landing-main-body{
    width: 1100px;
    margin: auto;
    height: 100%;
    padding-top: 0px;
}
.main-page-section{
    width: 900px;
    height: 84px;
    margin: auto;
    padding: 5px;
}
.book-image{
    width: 100px;
    height: 80px;
    border: 2px solid black;
    background-color: white;
    border-radius: 30px;
    float: left;
}
.landing-quiz{
    border-radius: 30px;
    border: 2px solid black;
    height: 80px;
    float: right;
    width: 600px;
    margin-left: 45px;
    box-shadow: 0 40px 50px 0 rgba(24, 24, 24, 0.747), 0 10px 50px 0 rgba(0,0,0,0.7);
    float: left;
    text-align: center;
    color: black;
    background-color: white;
}
.landing-quiz:hover{
    background-color: rgba(153, 153, 153, 0.568);
}
.landing-score{
    width: 100px;
    height: 80px;
    float: right;
    border-radius: 30px;
    line-height: 80px;
    text-align: center;
    font-size: x-large;
    font-weight: 900;
}
.image-1{
    background: url(../images/book-covers/book1-cover.jpg) no-repeat center center;
    background-size: cover;
}
.image-2{
    background: url(../images/book-covers/book2-cover.jpg) no-repeat center center;
    background-size: cover;
}
.image-3{
    background: url(../images/book-covers/book3-cover.jpg) no-repeat center center;
    background-size: cover;
}
.image-4{
    background: url(../images/book-covers/book4-cover.png) no-repeat center center;
    background-size: cover;
}
.image-5{
    background: url(../images/book-covers/book5-cover.jpg) no-repeat center center;
    background-size: cover;
}
.image-6{
    background: url(../images/book-covers/book6-cover.png) no-repeat center center;
    background-size: cover;
}
.image-7{
    background: url(../images/book-covers/book7-cover.jpg) no-repeat center center;
    background-size: cover;
}
/* ----------------STYLINGS OF Titles on Quiz pages------------------- */
#bottomLinks, #topLinks{
    display: none;
}
#home, #reveal, #refresh{
    margin-top: 30px;
    display: inline-block;
    width: 200px;
}
.tick, .tick > img{
    width: 40px;
    height: 40px;
    margin: auto;
}
.tick{
    display: none;
}
.home-link{
    height: 50px;
    font-size: xx-large;
    border-radius: 20px;
    padding: 10px;
}
.book-1, .link-1{
    background-color: rgb(160, 20, 20);
    color: rgb(235, 193, 54);
    border: 2px solid rgb(14, 122, 14);
}
.book-2, .link-2{
    background-color: rgb(39, 39, 110);
    color: rgb(34, 133, 34);
    border: 2px solid rgb(146, 26, 26);
}
.book-3, .link-3{
    background-color: rgb(85, 38, 85);
    color: rgb(248, 206, 116);
    border: 2px solid lightblue;
}
.book-4, .link-4{
    background-color: rgb(206, 40, 40);
    color: rgb(44, 44, 194);
    border: 2px solid rgb(84, 133, 150);
}
.book-5, .link-5{
    background-color: rgb(231, 184, 31);
    color: rgb(148, 28, 28);
    border: 2px solid rgb(28, 29, 94);
}
.book-6, .link-6{
    background-color: rgb(53, 53, 145);
    color: rgb(46, 146, 46);
    border: 2px solid rgb(30, 82, 30);
}
.book-7, .link-7{
    background-color: black;
    color: white;
    border: 2px solid rgb(160, 47, 6);
}
.select-quiz-heading{
    text-transform: uppercase;
    margin-top: 15px;
    margin-bottom: 0px;
}
.title{
    margin-top: 0px;
    margin-bottom: 10px;
    font-style: italic;
}
.book-1-title, .book-6-title, .book-7-title{
    color: white;
}
.book-2-title{
    color: rgb(180, 38, 38);
}
.book-3-title{
    color: rgb(137, 185, 201);
}
.book-4-title{
    color: rgb(0, 0, 0);
}
.book-5-title{
    color: rgb(28, 29, 94);
}
/* ----------------STYLINGS OF QUIZ PAGES------------------- */
#quiz-container{
    background-color: rgba(255, 255, 255, 0.74);
    width: 60%;
    margin: auto;
    text-align: center;
    padding-bottom: 50px;
    padding-top: 30px;
}
#radio-select{
    margin-bottom: 10px;
}
label {
    display: inline-block;
    width: 80%;
    padding: 10px;
    border: solid 2px #ccc;
    background-color: white;
    border-radius: 30px;
    height: 50px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: auto;
    margin-bottom: 10px;
    transition: all;
  }
label:hover{
    background-color: rgba(177, 175, 175, 0.747);
}
#quiz-questions{
    padding-top: 50px;
    margin-left: 100px;
    margin-right: 100px;
}
#submit{
    margin-bottom: 20px;
    width: 50%;
    height: 50px;
    border-radius: 20px;
}
.quiz-page-heading{
    width: 80%;
    border-radius: 20px;
    margin: auto;
    margin-top: 30px;
}
input[type="radio"] {
    display: none;
  }
input[type="radio"]:checked + label {
    border: solid 2px rgb(43, 43, 43);
    background-color: rgb(170, 170, 170);
  }

  /*Responsiveness*/
  @media screen and (max-width: 1020px){
    #home, #reveal, #refresh{
        width: 150px;
    }
  }
  @media screen and (max-width: 960px){
    .landing-main-body{
        width: 100%;
    }
    .main-page-section{
        width: 500px;
        margin: auto;
    }  
    .landing-quiz{
        width: 300px;
      }
    #quiz-container{
        width: 90%;
    }  
  }
  @media screen and (max-width: 550px){
    .landing-heading{
        font-size: large;
    }
    .landing-sub-heading{
        font-size: small;
    }
    .select-quiz-heading{
        font-size: medium;
        margin-top: 10px;
    }
    .title{
        font-size: x-small;
    }
    .landing-quiz{
        height: 50px;
        width: 200px;
        border-radius: 20px;
        margin-left: 10px;
    }
    .book-image{
        height: 50px;
        width: 60px;
        border-radius: 20px;
    }
    .main-page-section{
        width: 280px;
        height: 55px;
    }
    #quiz-questions{
        margin-left: 20px;
        margin-right: 20px;
        font-size: small;
        padding-top: 20px;
    }
    label{
        height: 30px;
        margin-bottom: 5px;
        font-size: small;
    }
    .tick, .tick > img{
        width: 20px;
        height: 20px;
    }
    #home, #reveal, #refresh{
        width: 90px;
        font-size: x-small;
    }
  }
  @media screen and (max-width: 330px){
      .landing-heading{
          font-size: medium;
      }
  }
  

